hphp/hack/test/typecheck/xhp_attr_24.php.exp
File "xhp_attr_24.php", line 8, characters 17-21:
Invalid xhp value for attribute :bar in :foo (Typing[4343])
File "xhp_attr_24.php", line 4, characters 13-15:
Expected int
File "xhp_attr_24.php", line 8, characters 17-21:
But got string
